--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "graphql": "^0.8.2"
+  },
+  "dependencies": {
+    "socket.io": "^1.6.0"
   }
 }
