--- a/package.json
+++ b/package.json
@@ -22,12 +22,18 @@
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-es2017": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "webpack": "^1.13.2",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-graphql": "^0.6.1",
     "graphql": "^0.8.2"
   },
   "dependencies": {
-    "socket.io": "^1.6.0"
+    "socket.io": "^1.6.0",
+    "jquery": "^3.1.0",
+    "rxjs": "^5.0.0-beta.12"
   }
 }
