--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "graphql": "^0.8.2"
   },
   "dependencies": {
-    "socket.io": "^1.6.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "jquery": "^3.1.0",
-    "rxjs": "^5.0.0-beta.12"
+    "rxjs": "^5.0.0-beta.12",
+    "socket.io": "^1.6.0"
   }
 }
