--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Playing with GraphQL",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "live-server --port:8000",
+    "build": "webpack -w"
   },
   "repository": {
     "type": "git",
