--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "live-server --port:8000",
+    "start": "live-server --port=8000",
     "build": "webpack -w"
   },
   "repository": {
